<resources>
    <string name="app_name">PC shop</string>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>