<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/pc_background"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/sign_in" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="25dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="15dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="15dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textColor="@color/white"

        />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnsignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"

        android:visibility="invisible" />


</RelativeLayout>